--- a/test.travis.ini
+++ b/test.travis.ini
@@ -9,11 +9,11 @@ host = 0.0.0.0
 port = 5000
 
 [app:main]
-use = config:../ckan/test-core.ini
-ckan.plugins = c3charts
-# Insert any custom config settings to be used when running your extension's
-# tests here.
+use = config:ckan/test-core.ini
 
+ckan.site_url = http://localhost:5000
+
+solr_url = http://127.0.0.1:8983/solr
 
 # Logging configuration
 [loggers]
