--- a/test.ini
+++ b/test.ini
@@ -9,8 +9,7 @@ host = 0.0.0.0
 port = 5000
 
 [app:main]
-use = config:../ckan/test-core.ini
-ckan.plugins = c3charts
+use = config:ckan/test-core.ini
 # Insert any custom config settings to be used when running your extension's
 # tests here.
 
