--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,13 @@ language: python
 python:
   - "2.7"
 env: PGVERSION=9.2
-dist: thusty
+dist: trusty
 sudo: required
 cache: pip
 before_install:
   - chmod +x ./bin/travis-build.bash
   - chmod +x ./bin/travis-run.sh
-install:
-  - ./bin/travis-build.bash
+install: ./bin/travis-build.bash
 script:
   - ./bin/travis-run.sh
 after_success:
