--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
-env: PGVERSION=9.1
-dist: thusty
+env: PGVERSION=9.2
+dist: trusty
 sudo: required
 cache: pip
 before_install:
   - chmod +x ./bin/travis-build.bash
   - chmod +x ./bin/travis-run.sh
-install:
-  - ./bin/travis-build.bash
-  - pip install coveralls
+install: ./bin/travis-build.bash
 script:
   - ./bin/travis-run.sh
 after_success:
